# moncap

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  RustConfig  app.json  docker-compose.yml  heroku.yml
.github/workflows/: ci.yml  deploy.yml  ios-testflight.yml  keepalive.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .gitignore  README.md  TEST-RETOURS.md
frontend/Config/: Info.plist
frontend/MonCapGPS/: APIClient.swift  AuthStore.swift  Avatars.swift  ContentView.swift  DayNight.swift  FuelPrice.swift  Info.plist  LocationManager.swift  LocationSearch.swift  LoginView.swift  Models.swift  MonCapGPSApp.swift  NavigationManager.swift  NearbyAlerts.swift  RealtimeClient.swift  RouteService.swift  ShareSheet.swift  SpeedLimit.swift  SplashView.swift
frontend/MonCapGPS.xcodeproj/: project.pbxproj
frontend/MonCapGPS.xcodeproj/xcshareddata/xcschemes/: MonCapGPS.xcscheme
frontend/MonCapGPS/Assets.xcassets/LaunchBackground.colorset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/Logo.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/carAbarthRed.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/carAbarthWhite.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/carAlpine.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/carFerrari.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/carMerc1.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/carMerc2.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/carRed1.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/carYarisBlue.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/carYarisGrey.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/carYarisWhite.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/vanBlue.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/vanGreen.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/vanMint.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/vanOrange.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/vwGreen.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/vwMint.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/vwOrange.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/vwSurf.imageset/: Contents.json
frontend/MonCapGPS/Assets.xcassets/vwTeal.imageset/: Contents.json
frontend/fastlane/: Appfile  Fastfile  Matchfile
frontend/scripts/: asc_signing.py
src/: auth.rs  main.rs
src/entity/: alert.rs  mod.rs  position.rs  search.rs  trip.rs  user.rs
src/migration/: m0001_init.rs  m0002_trips.rs  m0003_searches.rs  m0004_positions_index.rs  m0005_alerts.rs  mod.rs
web/: README.md  index.html  package.json  static-server.ts  tsconfig.json
web/src/: App.tsx  AuthView.tsx  MapView.tsx  api.ts  avatars.ts  globals.d.ts  styles.css  types.ts
