[package]
name = "moncap-gps"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
async-trait = "0.1"
rayon = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
jsonwebtoken = "9"

[[bin]]
name = "moncap-gps"
path = "src/main.rs"

# Binaire de production : symboles retirés (plus léger). On évite le LTO
# agressif pour rester sous la limite de temps de build des buildpacks Heroku.
[profile.release]
strip = true
