[package]
name = "moncap-gps"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
# Features ciblées (au lieu de "full") : évite de compiler fs/process/signal/
# io-std inutiles ici → build plus léger et binaire un peu plus petit.
tokio = { version = "1", features = [
    "rt-multi-thread", "macros", "sync", "time", "net", "signal",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip", "compression-br"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
async-trait = "0.1"
rayon = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
jsonwebtoken = "9"
# Pont pub/sub multi-instances (optionnel : activé si REDIS_URL est défini).
# rustls + insecure : Heroku Redis impose TLS avec certificat auto-signé.
redis = { version = "0.27", features = ["tokio-rustls-comp", "tls-rustls-insecure"] }
futures-util = "0.3"

[dev-dependencies]
# `oneshot` pour tester les handlers Axum sans ouvrir de port réseau.
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "moncap-gps"
path = "src/main.rs"

# Binaire de production : symboles retirés + optimisations d'édition de liens.
# LTO « thin » (bon compromis perf / temps de build, contrairement au « fat »
# qui risquerait de dépasser la limite de build des buildpacks Heroku) et une
# seule unité de codegen pour un meilleur inlining. opt-level 3 est déjà le
# défaut en release.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
